--- a/partials/bio_foell.hbs
+++ b/partials/bio_foell.hbs
@@ -7,11 +7,11 @@
 <p>Heather's resume includes the following:</p>
 
 <ul>
-  <li>Diploma in Fitness and Health Promotion  – Conestoga College (2013)</li>
-  <li>Diploma in Fitness and Health Promotion  – Humber College (2015)</li>
-  <li>Therapeutic Exercise of Musculoskeletal Disorders Certification –University of Guelph-Humber (2014)</li>
+  <li>Registered Kinesiologist, College of Kinesiologists of Ontario (2013)</li>
   <li>Bachelor of Applied Science, Honours Kinesiology – University of Guelph-Humber (2015)</li>
+  <li>Diploma in Fitness and Health Promotion  – Humber College (2015)</li>
+  <li>Diploma in Fitness and Health Promotion  – Conestoga College (2013)</li>
+  <li>Therapeutic Exercise of Musculoskeletal Disorders Certification – University of Guelph-Humber (2014)</li>
   <li>Fitness Instructor Specialist, Can-Fit-Pro (2013 -2015)</li>
   <li>Pursuing CSEP-CPT certification exam  (January 2016)</li>
-  <li>Affiliate Member, Ontario Kinesiology Association (2015)</li>
 </ul>
