--- a/partials/bio_hopf.hbs
+++ b/partials/bio_hopf.hbs
@@ -4,11 +4,12 @@
 
 <p>Andrew is also a highly sought after speaker on the topics of nutrition and performance enhancement. He is a regularly travels all over Ontario speaking at major OHF and OHL events, spreading the message of proper nutrition and preparation habits.</p>
 
-<p>He is also currently the Head Strength and Conditioning Coach of the Owen Sound Attack (OHL), a position he has held for the past five seasons.</p>
+<p>He is currently the Lead Strength and Conditioning Coach at the University of Waterloo, and the Head Strength and Conditioning Coach of the Owen Sound Attack (OHL), a position he has held for the past five seasons.</p>
 
-<p>Andrew’s resume also includes the following:</p>
+<p>Andrew’s resume includes the following:</p>
 
 <ul>
+<li>Lead Strength and Conditioning Coach - University of Waterloo - 2016-Presesnt</li>
   <li>Head Strength and Conditioning Coach – Owen Sound Attack (OHL) – 2010-Present</li>
   <li>Member of the Ontario Hockey League Strength and Conditioning Association- 2012-Present</li>
   <li>Masters of Science Degree (University of Waterloo)-2009</li>
