--- a/partials/bio_hagemann.hbs
+++ b/partials/bio_hagemann.hbs
@@ -1,10 +1,13 @@
 <h2>Eric Hagemann, MSc, CSCS</h2>
 <h3>Director of Training</h3>
-<p>Eric has obtained a degree in Kinesiology from the University of Waterloo (2007) and a Master’s of Science degree in Rehabilitation Science from the University of Toronto (2009). In 2010, Eric joined Next Level Performance Training as Head Strength and Conditioning Coach, where he is currently in charge of athlete programming and training systems research and development. During that time, Eric has worked with and designed training programs for many of Waterloo region’s elite athletes from a variety of sports including hockey, baseball, speed skating, Alpine skiing, rugby, and snowboarding.</p>
+<p>Eric obtained a degree in Kinesiology from the University of Waterloo (2007) and a Master’s of Science degree in Rehabilitation Science from the University of Toronto (2009). In 2010, Eric joined Next Level Performance Training as Head Strength and Conditioning Coach, where he is served for 5 years before transitioning into his current role as the Director of Training where he is in charge of NLPT’s training philosophy and training systems research and development. </p>
+
+<p>During his time at NLPT, Eric has worked with and designed training programs for many of Waterloo region’s elite athletes from a variety of sports including hockey, baseball, speed skating, Alpine skiing, rugby, and snowboarding.</p>
 
 <p>Eric’s resume also includes the following:</p>
 
 <ul>
+  <li>Postural Restoration Institute - Myokinematic Restoration - 2015</li>
   <li>Poliquin International Certification Program, Level 1 – 2011</li>
   <li>Certified Strength and Conditioning Specialist, NSCA – 2010</li>
   <li>Functional Movement Screen (FMS) Certified, Level 1 – 2010</li>
